@@ -232,7 +232,8 @@ sub prepare_soap
         $soap = SOAP::Lite
                           #-> service('http://openmodeller.sf.net/ns/1.0/openmodeller.wsdl')
 		           -> uri( $omws_uri )
-		           -> proxy( $server )
+		           -> proxy( $server, options => {compress_threshold => 10000} )
+		           #-> proxy( $server )
 		           -> encoding( 'iso-8859-1' );
     }
 }
